Fix scrollbar color in dark mode (#73)

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -23,3 +23,11 @@ body {
   // --secondary-color: rgba(138, 43, 226, var(--gradient-opacity));
   // --accent-color: rgba(180, 170, 220, var(--gradient-opacity));
 }
+
+:root[data-theme='light'] {
+  color-scheme: light;
+}
+
+:root[data-theme='dark'] {
+  color-scheme: dark;
+}
